<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Fragments.onClickImage.FragmentOCIllustrations"
    android:id="@+id/fragment_illustrations">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/illustratrion_oc_Image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                android:src="@drawable/img10" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/backIllustration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    app:icon="@drawable/ic_arrow_back" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/illustration_oc_ProfileImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/perro" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/illustration_text_view_oc_tittle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="user"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/illustration_text_view_oc_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="user"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/followButtonIllustration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Follow"
                    android:layout_marginLeft="75dp"
                    android:textColor="@color/colorPrimary"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    />


            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton_illustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="40dp"
        android:focusable="true"
        app:tint="@null"
        android:src="@drawable/likeheartwhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription,MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>