...
                android:textStyle="bold"
                android:textSize="20dp"
                />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_illustrations_ranking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:scrollbars="horizontal"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
...
